# profilectl

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  cliff.toml  dist-workspace.toml  install.py  pyproject.toml  release.toml  tool_workflow.md
.cargo/: config.toml
.github/workflows/: check-fmt.yml  check-lint.yml  check-release.yml  ci.yml  publish-crates.yml  publish-pypi.yml  release_pypi.yml
config/shell/: starship.toml
crates/: README.md
crates/dfiles/: Cargo.toml
crates/dfiles-cli/: Cargo.toml
crates/dfiles-cli/src/: args.rs
crates/dfiles-cli/src/commands/: check.rs  diff.rs  install.rs  link.rs  mod.rs  profiles.rs  scan.rs  status.rs  sync.rs  unlink.rs
crates/dfiles-config/: Cargo.toml
crates/dfiles-config/src/: profile.rs
crates/dfiles-interactive/: Cargo.toml
crates/dfiles-interactive/src/: lib.rs  menu.rs  progress.rs
crates/dfiles-types/: Cargo.toml
crates/profilectl/: Cargo.toml
crates/profilectl-cli/: Cargo.toml
crates/profilectl-cli/src/: args.rs  lib.rs
crates/profilectl-cli/src/commands/: bootstrap.rs  check.rs  diff.rs  init.rs  install.rs  link.rs  mod.rs  profile.rs  profiles.rs  scan.rs  status.rs  sync.rs  unlink.rs
crates/profilectl-config/: Cargo.toml
crates/profilectl-config/src/: global_config.rs  lib.rs  loader.rs  profile.rs
crates/profilectl-interactive/: Cargo.toml
crates/profilectl-interactive/src/: menu.rs  progress.rs
crates/profilectl-types/: Cargo.toml  release.toml
crates/profilectl-types/src/: error.rs  lib.rs  platform.rs
manifests/: links.json
profiles/: default.toml
scripts/: release_pypi.py
src/dotfiles/: cli.py  config_manager.py  helpers.py
src/dotfiles/commands/: config.py  install.py  scan.py  verify.py
