[workspace]
resolver = "2"
members = [
    "crates/dfiles",
    "crates/dfiles-cli",
    "crates/dfiles-config",
    "crates/dfiles-interactive",
    "crates/dfiles-types",
]

[workspace.package]
authors     = ["Carlos Ferreyra <eduferreyraok@gmail.com>"]
edition     = "2021"
homepage    = "https://github.com/carlosferreyra/dotfiles"
license     = "MIT"
repository  = "https://github.com/carlosferreyra/dotfiles"
rust-version = "1.85"
version     = "0.1.0"

[workspace.dependencies]
# CLI
clap        = { version = "4.5", features = ["derive", "env"] }

# TUI / interactive
indicatif   = { version = "0.17" }
inquire     = { version = "0.7" }

# Serialization
serde       = { version = "1", features = ["derive"] }
toml        = { version = "0.8" }

# Error handling
anyhow      = { version = "1" }
thiserror   = { version = "2" }

# Filesystem / paths
dirs        = { version = "5" }

# Logging / output
tracing           = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
dfiles-cli         = { path = "crates/dfiles-cli" }
dfiles-config      = { path = "crates/dfiles-config" }
dfiles-interactive = { path = "crates/dfiles-interactive" }
dfiles-types       = { path = "crates/dfiles-types" }
