[build-system]
  build-backend = "hatchling.build"
  requires      = ["hatchling"]

[project]
  authors = [{ name = "Carlos Ferreyra", email = "carlosferreyra@example.com" }]
  classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
  ]
  description = "Cross-platform dotfiles automation with Python"
  keywords = ["automation", "configuration", "dotfiles"]
  license = { text = "MIT" }
  name = "dotfiles"
  readme = "README.md"
  requires-python = ">=3.12"
  version = "0.1.0"

[project.urls]
  Homepage   = "https://github.com/carlosferreyra/dotfiles"
  Issues     = "https://github.com/carlosferreyra/dotfiles/issues"
  Repository = "https://github.com/carlosferreyra/dotfiles.git"

[project.scripts]
  dotfiles-install = "dotfiles.cli:main_install"
  dotfiles-update  = "dotfiles.cli:main_update"

[tool.uv]
  managed          = true
  python-downloads = "never"

[tool.hatch.build.targets.wheel]
  packages = ["src/dotfiles"]
