[package]
name        = "dfiles-cli"
description = "Clap-based CLI subcommands for dfiles"
edition.workspace    = true
version.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
rust-version.workspace = true

[dependencies]
anyhow.workspace        = true
clap.workspace          = true
dfiles-config.workspace = true
dfiles-types.workspace  = true
indicatif.workspace     = true
tracing.workspace       = true
