[package]
name        = "dfiles-config"
description = "Profile schema and TOML config loading for dfiles"
edition.workspace    = true
version.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
rust-version.workspace = true

[dependencies]
anyhow.workspace      = true
dfiles-types.workspace = true
dirs.workspace        = true
serde.workspace       = true
thiserror.workspace   = true
toml.workspace        = true
