[package]
name        = "dfiles-interactive"
description = "Interactive TUI mode for dfiles using inquire and indicatif"
edition.workspace    = true
version.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
rust-version.workspace = true

[dependencies]
anyhow.workspace        = true
dfiles-config.workspace = true
dfiles-types.workspace  = true
indicatif.workspace     = true
inquire.workspace       = true
