[package]
name           = "profilectl-cli"
description    = "Clap-based CLI subcommands for profilectl"
edition.workspace      = true
version.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
rust-version.workspace = true

[dependencies]
anyhow.workspace              = true
clap.workspace                = true
profilectl-config.workspace   = true
profilectl-types.workspace    = true
indicatif.workspace           = true
tracing.workspace             = true
