[package]
name           = "profilectl-config"
description    = "Profile schema and TOML config loading for profilectl"
edition.workspace      = true
version.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
rust-version.workspace = true

[dependencies]
anyhow.workspace           = true
profilectl-types.workspace = true
dirs.workspace             = true
minijinja.workspace        = true
serde.workspace            = true
thiserror.workspace        = true
toml.workspace             = true
