[package]
name           = "profilectl-types"
description    = "Shared types, platform detection, and error definitions for profilectl"
edition.workspace      = true
version.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
rust-version.workspace = true

[dependencies]
anyhow.workspace    = true
serde.workspace     = true
thiserror.workspace = true
toml.workspace      = true
